test/scc/pp/errors/009.a
009.t:1:13: error: '##' cannot appear at either end of macro expansion